--- a/BroCode - HTML & CSS Full Course for free (2023)/index.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/index.html
@@ -11,14 +11,19 @@
       <h3>This is an h3 heading</h3>
       <h4>This is an h4 heading</h4>
       <h5>This is an h5 heading</h5>
+      <hr> <!--This is a horizontal rule-->
       <br> <!--This is a line break-->
       <br>
-      <p>
+      <p> <!--Paragraphs don't care about spaces or new lines-->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odit, consequuntur rem repellendus commodi hic exercitationem? Commodi, provident optio. Nulla, maiores natus atque sunt magnam dolorum provident. Distinctio, placeat! Fugiat?
       </p>
+      <pre> <!--Preformatted text-->
+        This is preformatted text.
+        It preserves spaces and new lines.
       <p>
         Paragraphs are separated by a line break.
       </p>
+      <!--This is a comment-->
     </body>
   </head>
 </html>
