--- a/BroCode - HTML & CSS Full Course for free (2023)/02_lyrics.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/02_lyrics.html
@@ -9,6 +9,11 @@
   <body>
     <h1> Your Universe </h1>
     <h4> Song by: Rico Blanco </h4>
+    <a href="https://www.youtube.com/watch?v=V4k9ktnT8y8"
+    target="_blank"
+    title="Go To Music Video of the Song">
+      Original Video
+    </a>
     <hr>
     <br>
     <pre>
