--- a/BroCode - HTML & CSS Full Course for free (2023)/00_index.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/00_index.html
@@ -17,9 +17,16 @@
       <p> <!--Paragraphs don't care about spaces or new lines-->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia odit, consequuntur rem repellendus commodi hic exercitationem? Commodi, provident optio. Nulla, maiores natus atque sunt magnam dolorum provident. Distinctio, placeat! Fugiat?
       </p>
+      <!-- If you need some sample text, you can just type 'Lorem' then hit enter -->
+      <p> 
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi rerum, non asperiores quae fugit ipsum quas ipsa quasi dicta iusto ducimus possimus laboriosam, repudiandae quam quis fugiat eos. Dolorem, nisi!
+      </p>
+      <hr />
       <pre> <!--Preformatted text-->
         This is preformatted text.
         It preserves spaces and new lines.
+      </pre>
+      <!-- This is a comment -->
       <p>
         Paragraphs are separated by a line break.
       </p>
