span & div : done!

--- a/BroCode - HTML & CSS Full Course for free (2023)/07a_text_formatting.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/07a_text_formatting.html
@@ -13,7 +13,7 @@
         <p>This is <small>small</small> text</p>
         <p>This is a <sub>subscript</sub></p>
         <p>Thi is a <sup>superscript</sup></p>
-        <p>This is a <tt>monospaced</tt> text/p>
-        <p>This is a <mark style="background-color: lightblue;">marked</mark> text</p>
+        <p>This is a <tt>monospaced</tt> text</p>
+        <p>This is a <mark style="background-color: yellow;">marked</mark> text</p>
     </body>
 </html>
