chore: CHANGE file names of css files

--- a/BroCode - HTML & CSS Full Course for free (2023)/15a_colors.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/15a_colors.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COLORS</title>
-  <link rel="stylesheet" href="15a_style.css">
+  <link rel="stylesheet" href="15a_colors.css">
 </head>
 <body>
   <p class="odd" id="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fugit nostrum iste voluptatem, cupiditate
