--- a/BroCode - HTML & CSS Full Course for free (2023)/17a_borders.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/17a_borders.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BORDERS</title>
-  <link rel="stylesheet" href="17a_style.css">
+  <link rel="stylesheet" href="17a_borders.css">
 </head>
 <body>
     <h1>Keith Ginoel Gabinete</h1>
