--- a/BroCode - HTML & CSS Full Course for free (2023)/14c_introduction_to_css_external_page2.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/14c_introduction_to_css_external_page2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>INTRODUCTION TO CSS</title>
-  <link rel="stylesheet" href="14c_style.css">
+  <link rel="stylesheet" href="14c_introduction.css">
 </head>
 
 <body>
