--- a/BroCode - HTML & CSS Full Course for free (2023)/18a_shadows.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/18a_shadows.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHADOWS</title>
-  <link rel="stylesheet" href="18a_style.css">
+  <link rel="stylesheet" href="18a_shadows.css">
 </head>
 <body>
   <h1>Keith Ginoel Gabinete</h1>
