--- a/BroCode - HTML & CSS Full Course for free (2023)/19a_margins.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/19a_margins.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARGINS</title>
-  <link rel="stylesheet" href="19a_style.css">
+  <link rel="stylesheet" href="19a_margins.css">
 </head>
 <body>
   <!-- margins = space around an element -->
