--- a/BroCode - HTML & CSS Full Course for free (2023)/20a_float.html
+++ b/BroCode - HTML & CSS Full Course for free (2023)/20a_float.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FLOAT</title>
-  <link rel="stylesheet" href="20a_style.css">
+  <link rel="stylesheet" href="20a_float.css">
 </head>
 <body>
   <!-- float = allows other elements to flow around it -->
